[package]
name = "rit"
version = "0.1.0"
authors = ["Thom May <thom@may.yt>"]
edition = "2018"

[dependencies]
clap = "*"
sha1 = {version ="*", features = ["std"]}
uuid = {version = "*", features = ["v4"]}
flate2 = "*"
byteorder = "*"
failure = "*"
libc = "0.2"
indexmap = "*"
fs2 = "*"
hex = "*"
colored = { git = "https://github.com/vn971/colored.git"}
atty = "*"
regex = "1"
lazy_static = "*"
chrono = "*"

[dev-dependencies]
assert_cmd = "*"
predicates = "1"
tempdir = "0.3.7"